syntax = "proto3";

package todo;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc AddTodo(addTodoParams) returns (Todo) {}
  rpc gettodos(empty) returns (TodoList) {}
  rpc deleteTodo(deleteTodoParams) returns (empty) {}
  rpc updateTodo(updateTodoParams) returns (Todo) {}
}
message getTodos{}
message empty{}

message HelloRequest {
  string name = 1;
}
message deleteTodoParams {
  string id = 1;
}
 
message updateTodoParams {
  string id =1;
}

message HelloReply {
  string message = 1;
}

message addTodoParams {
  string title=1;
  string id=2;
}
message Todo {
  string title= 1;
  string id=2;
  bool isCompleted=3;
}

message TodoList {
  repeated Todo todo = 1;
}